tests/compile-fail/derive_enum_wrong_location_type.stderr
error: field 'location' must be of type Location (from suzunari_error). If you intended a custom field, rename it to avoid conflict.
 --> tests/compile-fail/derive_enum_wrong_location_type.rs:7:26
  |
7 |     Variant1 { location: String },
  |                          ^^^^^^
